Segregated options in dropdowns

--- a/PatternsGenerator/src/main/resources/templates/credits.html
+++ b/PatternsGenerator/src/main/resources/templates/credits.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://thymeleaf.org">
 <head>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
     <title>credits</title>
 </head>
 
@@ -14,8 +15,22 @@
     <a href="https://pl.wikibooks.org/wiki/Kody_źródłowe/Singleton_(wzorzec_projektowy)">https://pl.wikibooks.org/wiki/Kody_źródłowe/Singleton_(wzorzec_projektowy)</a>
     <br />
     <br />
-        <p>Observator source codes:</p>
+
+    <p>Observator source codes:</p>
     <a href="https://en.wikipedia.org/wiki/Visitor_pattern#Java_example">https://en.wikipedia.org/wiki/Visitor_pattern#Java_example</a>
+    <br />
+    <br />
+
+    <p>Factory source codes:</p>
+    <a href="http://krzysztofjelonek.net/wzorce-projektowe-fabryki/">http://krzysztofjelonek.net/wzorce-projektowe-fabryki/</a>
+    <br />
+    <br />
+
+    <p>Prototype source codes:</p>
+    <a href="https://pl.wikibooks.org/wiki/Kody_źródłowe/Prototyp_(wzorzec_projektowy)">https://pl.wikibooks.org/wiki/Kody_źródłowe/Prototyp_(wzorzec_projektowy)</a>
+    <br />
+    <br />
+
 </div>
 <br />
 <div class="container">
