--- a/PatternsGenerator/src/main/resources/templates/prototype.html
+++ b/PatternsGenerator/src/main/resources/templates/prototype.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://thymeleaf.org">
 <head>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
     <title>prototype</title>
     <script language="Javascript" type="text/javascript" src="/js/DownloadFile.js"></script>
     <script language="Javascript" type="text/javascript" src="/js/ValidateForm.js"></script>
@@ -13,91 +14,85 @@
 <div class="container-fluid">
 <div class="row">
     <div class="col">
-        <div class="container">
-            <p class="lead">Prototype generator</p>
-        </div>
+        <div class="panel panel-default">
+            <div class="panel-heading">Prototype generator</div>
 
-        <form class='needs-validation' action="prototype" method="post" novalidate>
-            <div class="form-group row">
-                <div class="col-sm-10">
-                    <label for="prototypeName">Write name of a Prototype class</label>
-                    <input type="text" id="prototypeName" name="prototypeName" class="form-control" placeholder="prototype class name" required th:value="${prototypeName}" onblur="this.form.submit()">
-                    <div class="invalid-feedback">
-                        Class name should not be empty.
+            <div class="panel-body">
+                <form class='needs-validation' action="prototype" method="post" novalidate>
+                    <div class="form-group row">
+                        <div class="col-sm-10">
+                            <label for="prototypeName">Write name of a Prototype class</label>
+                            <input type="text" id="prototypeName" name="prototypeName" class="form-control" placeholder="prototype class name" required th:value="${prototypeName}" onblur="this.form.submit()">
+                            <div class="invalid-feedback">
+                                Class name should not be empty.
+                            </div>
+                        </div>
                     </div>
-                </div>
-            </div>
-            <div class="form-group row">
-                <div class="col-sm-10">
-                    <label for="clientName">Write name of a Prototype Client class</label>
-                    <input type="text" id="clientName" name="clientName" class="form-control" placeholder="prototype client class name" required th:value="${clientName}" onblur="this.form.submit()">
-                    <div class="invalid-feedback">
-                        Class name should not be empty.
+                    <div class="form-group row">
+                        <div class="col-sm-10">
+                            <label for="clientName">Write name of a Prototype Client class</label>
+                            <input type="text" id="clientName" name="clientName" class="form-control" placeholder="prototype client class name" required th:value="${clientName}" onblur="this.form.submit()">
+                            <div class="invalid-feedback">
+                                Class name should not be empty.
+                            </div>
+                        </div>
                     </div>
-                </div>
-            </div>
-            <div class="form-group row">
-                <div class="col-sm-10">
-                    <label for="instanceName">Write name of a Prototype field in Client class</label>
-                    <input type="text" id="instanceName" name="instanceName" class="form-control" placeholder="prototype instance field name" required th:value="${instanceName}" onblur="this.form.submit()">
-                    <div class="invalid-feedback">
-                        Field name should not be empty.
+                    <div class="form-group row">
+                        <div class="col-sm-10">
+                            <label for="instanceName">Write name of a Prototype field in Client class</label>
+                            <input type="text" id="instanceName" name="instanceName" class="form-control" placeholder="prototype instance field name" required th:value="${instanceName}" onblur="this.form.submit()">
+                            <div class="invalid-feedback">
+                                Field name should not be empty.
+                            </div>
+                        </div>
                     </div>
-                </div>
-            </div>
-            <div class="form-group row">
-                <div class="col-sm-10">
-                    <label for="copyMethodName">Write name of a method that creates Prototype copy</label>
-                    <input type="text" id="copyMethodName" name="copyMethodName" class="form-control" placeholder="prototype copy method" required th:value="${copyMethodName}" onblur="this.form.submit()">
-                    <div class="invalid-feedback">
-                        Method name should not be empty.
+                    <div class="form-group row">
+                        <div class="col-sm-10">
+                            <label for="copyMethodName">Write name of a method that creates Prototype copy</label>
+                            <input type="text" id="copyMethodName" name="copyMethodName" class="form-control" placeholder="prototype copy method" required th:value="${copyMethodName}" onblur="this.form.submit()">
+                            <div class="invalid-feedback">
+                                Method name should not be empty.
+                            </div>
+                        </div>
                     </div>
-                </div>
-            </div>
-            <div class="form-group row">
-                <div class="col">
-                    <label>Should source code include comments?</label>
-                    <div class="form-check">
-                        <input class="form-check-input" type="checkbox" id="areCommentsIncluded" name="areCommentsIncluded" th:checked="${areCommentsIncluded}" onblur="this.form.submit()">
-                        <label class="form-check-label" for="areCommentsIncluded">
-                            Comments included
-                        </label>
+                    <div class="form-group row">
+                        <div class="col">
+                            <label>Should source code include comments?</label>
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox" id="areCommentsIncluded" name="areCommentsIncluded" th:checked="${areCommentsIncluded}" onblur="this.form.submit()">
+                            </div>
+                        </div>
                     </div>
-                </div>
+                    <div class="form-group row">
+                        <div class="col-sm-10">
+                            <br/>
+                            <button type="submit" class="btn btn-primary">Generate code</button>
+                        </div>
+                    </div>
+                </form>
             </div>
-            <div class="form-group row">
-                <div class="col-sm-10">
-                    <button type="submit" class="btn btn-primary">Generate code</button>
-                </div>
-            </div>
-        </form>
+        </div>
     </div>
 
     <div class="col">
-        <div class="container">
-            <p class="lead">Generated code - Prototype class</p>
-        </div>
-        <div class="card">
-            <div class="card-body" >
-                <pre id="toDownload" th:text="${prototype}"></pre>
-            </div>
-        </div>
-        <br />
-        <button type="button" class="btn btn-primary" onclick="downloadDiv('prototype.java', 'toDownload', 'text/plain')">Download code file</button>
-        <div class="container">
-            <br />
-            <p class="lead">Generated code - Prototype Client class</p>
-        </div>
-        <div class="card">
-            <div class="card-body" >
-                <pre id="toDownload2" th:text="${client}"></pre>
-            </div>
-        </div>
-        <br />
-        <button type="button" class="btn btn-primary" onclick="downloadDiv('prototypeClient.java', 'toDownload2', 'text/plain')">Download code file</button>
 
-        <br/>
-        <br/>
+        <div class="panel panel-default">
+            <div class="panel-heading">Generated code - Prototype class</div>
+            <div class="panel-body">
+                <pre id="toDownload" th:text="${prototype}"></pre>
+                <br />
+                <button type="button" class="btn btn-primary" onclick="downloadDiv('prototype.java', 'toDownload', 'text/plain')">Download code file</button>
+            </div>
+        </div>
+
+        <div class="panel panel-default">
+            <div class="panel-heading">Generated code - Prototype Client class</div>
+            <div class="panel-body">
+                <pre id="toDownload2" th:text="${client}"></pre>
+                <br />
+                <button type="button" class="btn btn-primary" onclick="downloadDiv('prototypeClient.java', 'toDownload2', 'text/plain')">Download code file</button>
+            </div>
+        </div>
         <button type="button" class="btn btn-primary"
                 onclick="downloadDiv('prototypeClient.java', 'toDownload2', 'text/plain');
                         downloadDiv('prototype.java', 'toDownload', 'text/plain')">
