--- a/PatternsGenerator/src/main/resources/templates/visitor.html
+++ b/PatternsGenerator/src/main/resources/templates/visitor.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://thymeleaf.org">
 <head>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
     <title>visitor</title>
     <script language="Javascript" type="text/javascript" src="/js/DownloadFile.js"></script>
     <script language="Javascript" type="text/javascript" src="/js/ValidateForm.js"></script>
@@ -13,149 +14,138 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col">
-            <div class="container">
-                <p class="lead">Visitor generator</p>
+            <div class="panel panel-default">
+                <div class="panel-heading">Visitor generator</div>
+
+                <div class="panel-body">
+                    <form class='needs-validation' action="visitor" method="post" novalidate>
+                        <div class="form-group row">
+                            <div class="col">
+                                <label for="className">Write name of Visitor class</label>
+                                <input type="text" id="className" name="className" class="form-control" placeholder="visitor class name" required th:value="${visitorName}" onblur="this.form.submit()">
+                                <div class="invalid-feedback">
+                                    This field should not be empty.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <div class="col">
+                                <label for="visitedName">Write name of Visited class</label>
+                                <input type="text" id="visitedName" name="visitedName" class="form-control" placeholder="visited class name" required th:value="${visitedName}" onblur="this.form.submit()">
+                                <div class="invalid-feedback">
+                                    This field should not be empty.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <div class="col">
+                                <label for="updateMethodName">Write name of method which updates Visitor state</label>
+                                <input type="text" id="updateMethodName" name="updateMethodName" class="form-control" placeholder="update method name" required th:value="${updateMethod}" onblur="this.form.submit()">
+                                <div class="invalid-feedback">
+                                    This field should not be empty.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <div class="col">
+                                <label for="changeStateMethodName">Write name of method which changes Visitor state</label>
+                                <input type="text" id="changeStateMethodName" name="changeStateMethodName" class="form-control" placeholder="state changing method name" required th:value="${changeMethod}" onblur="this.form.submit()">
+                                <div class="invalid-feedback">
+                                    This field should not be empty.
+                                </div>
+                            </div>
+                        </div>
+                        <label>Define type and name of state field in Visitor class</label>
+                        <div class="form-group row">
+                            <div class="col">
+                                <input type="text" id="stateType" name="stateType" class="form-control" placeholder="Type of Visitor state" required th:value="${visitorStateType}" onblur="this.form.submit()">
+                                <div class="invalid-feedback">
+                                    This field should not be empty.
+                                </div>
+                            </div>
+
+                            <div class="col">
+                                <input type="text" id="stateName" name="stateName" class="form-control" placeholder="Name of Visitor state" required th:value="${visitorState}" onblur="this.form.submit()">
+                                <div class="invalid-feedback">
+                                    This field should not be empty.
+                                </div>
+                            </div>
+
+                        </div>
+                        <label>Define type and name of state field in Visited class</label>
+                        <div class="form-group row">
+                            <div class="col">
+                                <input type="text" id="visitedState" name="visitedState" class="form-control" placeholder="Type of Visited state" required th:value="${visitedStateType}" onblur="this.form.submit()">
+                                <div class="invalid-feedback">
+                                    This field should not be empty.
+                                </div>
+                            </div>
+                            <div class="col">
+                                <input type="text" id="visitedStateObject" name="visitedStateObject" class="form-control" placeholder="Name of Visited state" required th:value="${visitedState}" onblur="this.form.submit()">
+                                <div class="invalid-feedback">
+                                    This field should not be empty.
+                                </div>
+                            </div>
+
+                        </div>
+                        <div class="form-group row">
+                            <div class="col">
+                                <label>Should source code include comments?</label>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" id="areCommentsIncluded" name="areCommentsIncluded" th:checked="${areCommentsIncluded}" th:value="${areCommentsIncluded}" onblur="this.form.submit()">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <div class="col">
+                                <br />
+                                <button type="submit" class="btn btn-primary">Generate code</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
             </div>
-
-            <form class='needs-validation' action="visitor" method="post" novalidate>
-                <div class="form-group row">
-                    <div class="col">
-                        <label for="className">Write name of Visitor class</label>
-                        <input type="text" id="className" name="className" class="form-control" placeholder="visitor class name" required th:value="${visitorName}" onblur="this.form.submit()">
-                        <div class="invalid-feedback">
-                            This field should not be empty.
-                        </div>
-                    </div>
-                </div>
-                <div class="form-group row">
-                    <div class="col">
-                        <label for="visitedName">Write name of Visited class</label>
-                        <input type="text" id="visitedName" name="visitedName" class="form-control" placeholder="visited class name" required th:value="${visitedName}" onblur="this.form.submit()">
-                        <div class="invalid-feedback">
-                            This field should not be empty.
-                        </div>
-                    </div>
-                </div>
-                <div class="form-group row">
-                    <div class="col">
-                        <label for="updateMethodName">Write name of method which updates Visitor state</label>
-                        <input type="text" id="updateMethodName" name="updateMethodName" class="form-control" placeholder="update method name" required th:value="${updateMethod}" onblur="this.form.submit()">
-                        <div class="invalid-feedback">
-                            This field should not be empty.
-                        </div>
-                    </div>
-                </div>
-                <div class="form-group row">
-                    <div class="col">
-                        <label for="changeStateMethodName">Write name of method which changes Visitor state</label>
-                        <input type="text" id="changeStateMethodName" name="changeStateMethodName" class="form-control" placeholder="state changing method name" required th:value="${changeMethod}" onblur="this.form.submit()">
-                        <div class="invalid-feedback">
-                            This field should not be empty.
-                        </div>
-                    </div>
-                </div>
-                <label>Define type and name of state field in Visitor class</label>
-                <div class="form-group row">
-                    <div class="col">
-                        <input type="text" id="stateType" name="stateType" class="form-control" placeholder="Type of Visitor state" required th:value="${visitorStateType}" onblur="this.form.submit()">
-                        <div class="invalid-feedback">
-                            This field should not be empty.
-                        </div>
-                    </div>
-
-                    <div class="col">
-                        <input type="text" id="stateName" name="stateName" class="form-control" placeholder="Name of Visitor state" required th:value="${visitorState}" onblur="this.form.submit()">
-                        <div class="invalid-feedback">
-                            This field should not be empty.
-                        </div>
-                    </div>
-
-                </div>
-                <label>Define type and name of state field in Visited class</label>
-                <div class="form-group row">
-                    <div class="col">
-                        <input type="text" id="visitedState" name="visitedState" class="form-control" placeholder="Type of Visited state" required th:value="${visitedStateType}" onblur="this.form.submit()">
-                        <div class="invalid-feedback">
-                            This field should not be empty.
-                        </div>
-                    </div>
-                    <div class="col">
-                        <input type="text" id="visitedStateObject" name="visitedStateObject" class="form-control" placeholder="Name of Visited state" required th:value="${visitedState}" onblur="this.form.submit()">
-                        <div class="invalid-feedback">
-                            This field should not be empty.
-                        </div>
-                    </div>
-
-                </div>
-                <div class="form-group row">
-                    <div class="col">
-                        <label>Should source code include comments?</label>
-                        <div class="form-check">
-                            <input class="form-check-input" type="checkbox" id="areCommentsIncluded" name="areCommentsIncluded" th:checked="${areCommentsIncluded}" th:value="${areCommentsIncluded}" onblur="this.form.submit()">
-                            <label class="form-check-label" for="areCommentsIncluded">
-                                Comments included
-                            </label>
-                        </div>
-                    </div>
-                </div>
-                <div class="form-group row">
-                    <div class="col">
-                        <button type="submit" class="btn btn-primary">Generate code</button>
-                    </div>
-                </div>
-            </form>
         </div>
+
         <div class="col">
-            <div class="container">
-                <p class="lead">Generated code - Visitor interface</p>
-            </div>
 
-            <div class="card">
-                <div class="card-body" >
+            <div class="panel panel-default">
+                <div class="panel-heading">Generated code - Visitor interface</div>
+                <div class="panel-body">
                     <pre id="toDownload1" th:text="${visitorInterfaceCode}"></pre>
+                    <br />
+                    <button type="button" class="btn btn-primary" onclick="downloadDiv('VisitorInterface.java', 'toDownload1', 'text/plain')">Download code file</button>
                 </div>
             </div>
-            <br />
-            <button type="button" class="btn btn-primary" onclick="downloadDiv('VisitorInterface.java', 'toDownload1', 'text/plain')">Download code file</button>
 
-            <div class="container">
-                <br />
-                <p class="lead">Generated code - Visitor class</p>
-            </div>
-            <div class="card">
-                <div class="card-body" >
+
+            <div class="panel panel-default">
+                <div class="panel-heading">Generated code - Visitor class</div>
+                <div class="panel-body">
                     <pre id="toDownload2" th:text="${visitorClassCode}"></pre>
+                    <br />
+                    <button type="button" class="btn btn-primary" onclick="downloadDiv('Visitor.java', 'toDownload2', 'text/plain')">Download code file</button>
                 </div>
             </div>
-            <br />
-            <button type="button" class="btn btn-primary" onclick="downloadDiv('Visitor.java', 'toDownload2', 'text/plain')">Download code file</button>
 
-            <div class="container">
-                <br />
-                <p class="lead">Generated code - Visited interface</p>
-            </div>
-            <div class="card">
-                <div class="card-body" >
+            <div class="panel panel-default">
+                <div class="panel-heading">Generated code - Visited interface</div>
+                <div class="panel-body">
                     <pre id="toDownload3" th:text="${visitedInterfaceCode}"></pre>
+                    <br />
+                    <button type="button" class="btn btn-primary" onclick="downloadDiv('Visitor.java', 'toDownload2', 'text/plain')">Download code file</button>
                 </div>
             </div>
-            <br />
-            <button type="button" class="btn btn-primary" onclick="downloadDiv('VisitedInterface.java', 'toDownload3', 'text/plain')">Download code file</button>
 
-            <div class="container">
-                <br />
-                <p class="lead">Generated code - Visited class</p>
-            </div>
-            <div class="card">
-                <div class="card-body" >
+            <div class="panel panel-default">
+                <div class="panel-heading">Generated code - Visited class</div>
+                <div class="panel-body">
                     <pre id="toDownload4" th:text="${visitedClassCode}"></pre>
+                    <br />
+                    <button type="button" class="btn btn-primary" onclick="downloadDiv('Visited .java', 'toDownload4', 'text/plain')">Download code file</button>
                 </div>
             </div>
-            <br />
-            <button type="button" class="btn btn-primary" onclick="downloadDiv('Visited .java', 'toDownload4', 'text/plain')">Download code file</button>
 
-            <br/>
-            <br/>
             <button type="button" class="btn btn-primary"
                     onclick="downloadDiv('VisitorInterface.java', 'toDownload1', 'text/plain');
                         downloadDiv('Visitor.java', 'toDownload2', 'text/plain');
@@ -164,8 +154,8 @@
                 Download all files
             </button>
         </div>
-        </div>
     </div>
+</div>
 
 <div th:insert="layout/footer"></div>
 </body>
