--- a/PatternsGenerator/src/main/resources/templates/layout/header.html
+++ b/PatternsGenerator/src/main/resources/templates/layout/header.html
@@ -56,6 +56,9 @@
                     <li class="nav-item active">
                         <a class="nav-link" href="credits">Sources<span class="sr-only">(current)</span></a>
                     </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="programInfo">Program info<span class="sr-only">(current)</span></a>
+                    </li>
                 </ul>
             </div>
         </nav>
