--- a/PatternsGenerator/src/main/resources/templates/layout/header.html
+++ b/PatternsGenerator/src/main/resources/templates/layout/header.html
@@ -33,6 +33,7 @@
 
                             <div class="dropdown-divider"></div>
                             <h6 class="dropdown-header">Structural patterns</h6>
+                            <a class="dropdown-item" href="adapter">Adapter</a>
                         </div>
                     </li>
                     <li class="nav-item dropdown">
@@ -51,6 +52,7 @@
 
                             <div class="dropdown-divider"></div>
                             <h6 class="dropdown-header">Structural patterns</h6>
+                            <a class="dropdown-item" href="adapterData">Adapter</a>
                         </div>
                     </li>
                     <li class="nav-item active">
