Added State! Cleaned some code

--- a/PatternsGenerator/src/main/resources/templates/layout/header.html
+++ b/PatternsGenerator/src/main/resources/templates/layout/header.html
@@ -30,6 +30,7 @@
                             <div class="dropdown-divider"></div>
                             <h6 class="dropdown-header">Behavioral patterns</h6>
                             <a class="dropdown-item" href="visitor">Visitor</a>
+                            <a class="dropdown-item" href="state">State</a>
 
                             <div class="dropdown-divider"></div>
                             <h6 class="dropdown-header">Structural patterns</h6>
@@ -49,6 +50,7 @@
                             <div class="dropdown-divider"></div>
                             <h6 class="dropdown-header">Behavioral patterns</h6>
                             <a class="dropdown-item" href="visitorData">Visitor</a>
+                            <a class="dropdown-item" href="stateData">State</a>
 
                             <div class="dropdown-divider"></div>
                             <h6 class="dropdown-header">Structural patterns</h6>
