Added state and adapter data

--- a/PatternsGenerator/src/main/resources/templates/stateData.html
+++ b/PatternsGenerator/src/main/resources/templates/stateData.html
@@ -12,6 +12,43 @@
 <body>
 <div th:insert="layout/header"></div>
 
+<div class="container">
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            State description
+        </div>
+
+        <div class="panel-body text-justify">
+            The State pattern is a solution to the problem of how to make behavior depend on state.
+
+            Define a "context" class to present a single interface to the outside world.
+            Define a State abstract base class.
+            Represent the different "states" of the state machine as derived classes of the State base class.
+            Define state-specific behavior in the appropriate State derived classes.
+            Maintain a pointer to the current "state" in the "context" class.
+            To change the state of the state machine, change the current "state" pointer.
+            The State pattern does not specify where the state transitions will be defined. The choices are two: the "context" object, or each individual State derived class. The advantage of the latter option is ease of adding new State derived classes. The disadvantage is each State derived class has knowledge of (coupling to) its siblings, which introduces dependencies between subclasses.
+
+            A table-driven approach to designing finite state machines does a good job of specifying state transitions, but it is difficult to add actions to accompany the state transitions. The pattern-based approach uses code (instead of data structures) to specify state transitions, but it does a good job of accommodating state transition actions.a structures. While this is a legitimate interpretation, perhaps a better perspective/rationale is the goal of promoting non-traditional behavior to full object status.
+            <div class="panel-footer text-center">
+                <img src="https://sourcemaking.com/files/v2/content/patterns/State1.png"/>
+            </div>
+
+            <div class="panel-footer">
+                <small>
+                    Source:
+                    <a href="https://sourcemaking.com/design_patterns/state">
+                        https://sourcemaking.com/design_patterns/state
+                    </a>
+
+                </small>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div th:insert="layout/footer"></div>
+
 
 </body>
 </html>
