--- a/PatternsGenerator/src/main/resources/templates/adapterData.html
+++ b/PatternsGenerator/src/main/resources/templates/adapterData.html
@@ -9,6 +9,36 @@
 <body>
 <div th:insert="layout/header"></div>
 
+<div class="container">
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            Adapter description
+        </div>
+
+        <div class="panel-body text-justify">
+
+            Reuse has always been painful and elusive. One reason has been the tribulation of designing something new, while reusing something old. There is always something not quite right between the old and the new. It may be physical dimensions or misalignment. It may be timing or synchronization. It may be unfortunate assumptions or competing standards.
+
+            It is like the problem of inserting a new three-prong electrical plug in an old two-prong wall outlet – some kind of adapter or intermediary is necessary.
+            Adapter is about creating an intermediary abstraction that translates, or maps, the old component to the new system. Clients call methods on the Adapter object which redirects them into calls to the legacy component. This strategy can be implemented either with inheritance or with aggregation.
+
+            Adapter functions as a wrapper or modifier of an existing class. It provides a different or translated view of that class.
+            <div class="panel-footer text-center">
+                <img src="https://sourcemaking.com/files/v2/content/patterns/Adapter_1.png "/>
+            </div>
+
+            <div class="panel-footer">
+                <small>
+                    Source:
+                    <a href="https://sourcemaking.com/design_patterns/adapter">
+                        https://sourcemaking.com/design_patterns/adapter
+                    </a>
+
+                </small>
+            </div>
+        </div>
+    </div>
+</div>
 <div th:insert="layout/footer"></div>
 </body>
 </html>
